# swagger.yaml
@@ -34,6 +34,10 @@ paths:
           description: "successful operation"
           schema:
             $ref: "#/definitions/Trips"
+        "400":
+          description: "Bad Request"
+          schema: 
+            $ref: "#/definitions/ApiResponse"
         "404":
           description: "No trips found"
           schema: 
